# externaldns-srv-companion

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: discovery.rs  kubernetes.rs  main.rs  route53.rs
src/.github/workflows/: build.yml
